2011-28-04 ckuhl <ckuhl@ipb-halle.de>
	* Fix bug in getpspectra, which incorrect label isotope peaks
2011-04-04 ckuhl <ckuhl@ipb-halle.de>
	* Fix bug in findAdducts, if pseudospectrum mass list has only NA values
2010-23-11 ckuhl <ckuhl@ipb-halle.de>
	* Fix bug in findAdducts. Function failed, if run in parallel mode.
2010-08-11 ckuhl <ckuhl@ipb-halle.de>
	* Add intval parameter to groupFWHM and findIsotopes
2010-08-11 ckuhl <ckuhl@ipb-halle.de>
	* Change getPeaklist to S4 Methods.
	* Add getPeaklist parameter intval, where the intensity value can be selected
2010-08-11 ckuhl <ckuhl@ipb-halle.de>
	* Additional bugfix for findIsotopes. Could occur with 1.7.1, that all isotopes will be deleted.
2010-01-11 ckuhl <ckuhl@ipb-halle.de>
	* Fix bug in findIsotopes. Occurs if the first isotope peak, could be assigned from two different monoisotopic peaks.
	* Reduce slightly the number of found isotopes
2010-11-10 ckuhl <ckuhl@ipb-halle.de>
	* Rewrite Vignette
2010-29-09 ckuhl <ckuhl@ipb-halle.de>
    	* Add function findNeutralLoss and findNeutralLossSpecs
2010-20-09 ckuhl <ckuhl@ipb-halle.de>
        * Add function getIsotopeCluster for retrival of isotope cluster
2010-11-06 ckuhl <ckuhl@ipb-halle.de>
	* Speed up in findAdducts
	* Fix unit tests
2010-05-03 ckuhl <ckuhl@ipb-halle.de>
	* Fix bug in findIsotopes, crashed with dim error
2010-04-20 ckuhl <ckuhl@ipb-halle.de>
        * Fix bug in annotate function
2010-04-19 ckuhl <ckuhl@ipb-halle.de>
	* Last changes for the next BioC release
	* Rewrite of the vignette
2010-03-17 ckuhl <ckuhl@ipb-halle.de>
	* Hugh changes in CAMERA for working with multiple sample
	* Add check constrains in groupCorr for isotopes and primary adducts
2009-11-24 ckuhl <ckuhl@ipb-halle.de>
        * Add experimental parallel mode with MPI
2009-11-20 ckuhl <ckuhl@ipb-halle.de>
        * Fix bug in setting ruletable
2009-08-26 ckuhl <ckuhl@ipb-halle.de>
        * add nSlaves as argument to findAdducts (for parallel annotation with MPI)