@@ -8,18 +8,20 @@
   Plot a pseudospectrum, with the most intense peaks labelled,
   to the current graphics device.
 }
+\usage{
+  plotPsSpectrum(object, pspec=1:length(object@pspectra), log=FALSE, value="into", maxlabel=0, title=NULL,mzrange=numeric(), sleep=0,...)
+}
+
 \section{Methods}{
 \describe{
-\item{object = "xsAnnotate"}{
-  \code{
-    plotPsSpectrum(object, pspec=NULL, log=FALSE,
-    value="maxo", maxlabel=0,
-        title=NULL,mzrange=numeric() sleep=0)
-}
+\item{\code{signature(object = "xsAnnotate")}}{
+  object deriviving from class "xsAnnotate"
 }}}
+
 \value{
   None.
 }
+
 \arguments{
   \item{object}{the \code{xsAnnotate} object}
   \item{pspec}{ID of the pseudospectrum to print}
@@ -29,7 +31,8 @@
   \item{title}{Main title of the Plot}
   \item{mzrange}{Which m/z range should plotted}
   \item{sleep}{Time (in seconds) to wait between successive Spectra, if
-    multiple \code{pspec} are requested.}    
+    multiple \code{pspec} are requested.}
+  \item{...}{Additional parameter for function plot}
 }
 \author{Steffen Neumann, \email{sneumann@ipb-halle.de}}
 \seealso{
