@@ -1,3 +1,5 @@
+2011-12-05 ckuhl <ckuhl@ipb-halle.de>
+	* plotPsSpectrum now accepts additional parameters for plot
 2011-28-04 ckuhl <ckuhl@ipb-halle.de>
 	* Fix bug in getpspectra, which incorrect label isotope peaks
 2011-04-04 ckuhl <ckuhl@ipb-halle.de>
